# inlyne

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION_API_REPORT.md  MIGRATION_GUIDE.md  README.md  codecov.yml  deny.toml  inlyne.default.toml  inlyne.sample.toml  inlyne.toml.sample  temp.md  typos.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  coverage.yml  release.yml
assets/: inlyne.desktop
assets/test_data/: CREDITS.md  rgb8.qoi  rgba8.qoi  sample.tmTheme
ci/: ubuntu-install-packages
completions/: README.md  _inlyne  _inlyne.ps1  inlyne.bash  inlyne.elv  inlyne.fish
src/: cli.rs  clipboard.rs  color.rs  debug_impls.rs  fonts.rs  history.rs  image.rs  interpreter.rs  main.rs  mermaid.rs  panic_hook.rs  positioner.rs  renderer.rs  selection.rs  table.rs  test_utils.rs  text.rs  utils.rs
src/file_watcher/: mod.rs  tests.rs
src/image/: decode.rs  mod.rs  tests.rs
src/image/cache/: headers.rs  mod.rs  request.rs  session.rs  tests.rs
src/image/cache/global/: db.rs  db_schema.sql  mod.rs  redb_impls.rs  value_impls.rs  wrappers.rs
src/interpreter/: ast.rs  element.rs  hir.rs  html.rs  mod.rs  tag_name.rs  tests.rs
src/interpreter/html/: attr.rs  element.rs  mod.rs  picture.rs  style.rs  tag_name.rs
src/interpreter/snapshots/: inlyne__interpreter__tests__aligned_table.snap  inlyne__interpreter__tests__bare_link_gets_autolinked.snap  inlyne__interpreter__tests__blockquote.snap  inlyne__interpreter__tests__centered_image_with_size_align_and_link.snap  inlyne__interpreter__tests__checklist_has_no_text_prefix.snap  inlyne__interpreter__tests__code_block_bg_color.snap  inlyne__interpreter__tests__code_in_ordered_list.snap  inlyne__interpreter__tests__collapsed_section.snap  inlyne__interpreter__tests__footnotes_list_prefix.snap  inlyne__interpreter__tests__handles_comma_in_info_str.snap  inlyne__interpreter__tests__header_inherit_align.snap  inlyne__interpreter__tests__horizontal_ruler.snap  inlyne__interpreter__tests__image_loading_fails_gracefully.snap  inlyne__interpreter__tests__kbd_tag.snap  inlyne__interpreter__tests__let_is_italicized.snap  inlyne__interpreter__tests__nested_ordered_list.snap  inlyne__interpreter__tests__num_is_bold.snap  inlyne__interpreter__tests__numbered_list_prefix.snap  inlyne__interpreter__tests__ordered_list_in_unordered.snap  inlyne__interpreter__tests__para_in_ordered_list.snap  inlyne__interpreter__tests__sanity.snap  inlyne__interpreter__tests__small_text.snap  inlyne__interpreter__tests__text_styles.snap  inlyne__interpreter__tests__toml_gets_highlighted.snap  inlyne__interpreter__tests__underline_in_codeblock.snap  inlyne__interpreter__tests__unique_anchors.snap  inlyne__interpreter__tests__unordered_list_in_ordered.snap  inlyne__interpreter__tests__visible_spacer_after_image.snap  inlyne__interpreter__tests__yaml_frontmatter.snap
src/keybindings/: action.rs  defaults.rs  keybindings.rs  mappings.rs  mod.rs  serialization.rs  tests.rs
src/metrics/: counter.rs  gauge.rs  hist.rs  log_recorder.rs  mod.rs
src/opts/: cli.rs  config.rs  mod.rs  tests.rs
src/opts/tests/: error_msg.rs  mod.rs  parse.rs
src/opts/tests/snapshots/: inlyne__opts__tests__error_msg__basic_equality.snap  inlyne__opts__tests__error_msg__fix_this_sucky_error_message.snap  inlyne__opts__tests__error_msg__invalid_theme_ty.snap  inlyne__opts__tests__error_msg__special_prefix.snap  inlyne__opts__tests__error_msg__unknown_theme.snap
src/shaders/: image.wgsl
src/test_data/: alacritty.md
src/test_utils/: image.rs  log.rs  mod.rs  server.rs  temp.rs
src/watcher/: mod.rs  tests.rs
xtask/: Cargo.toml
xtask/src/: gen.rs  main.rs
