[workspace]
members = [
    ".",
    "xtask",
]

[package]
name = "inlyne"
version = "0.4.0"
description = "Introducing Inlyne, a GPU powered yet browserless tool to help you quickly view markdown files in the blink of an eye."
edition = "2021"
authors = ["trimental"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trimental/inlyne"
homepage = "https://github.com/trimental/inlyne"
rust-version = "1.65"
exclude = [
    "/ci/*",
    "/.github/*",
    "/tests/manual_test_data/*",
]
keywords = ["markdown", "viewer", "gpu"]

[features]
default = ["wayland", "x11"]
x11 = ["copypasta/x11", "winit/x11"]
wayland = ["copypasta/wayland", "winit/wayland"]

[dependencies]
winit = { version = "0.28.7", default-features = false }
wgpu = "0.16"
bytemuck = { version = "1.14.0", features = [ "derive" ] }
lyon = "1.0.1"
comrak = { version = "0.19.0", default-features = false, features = ["shortcodes", "syntect"] }
open = "5.0.0"
html5ever = "0.26.0"
image = "0.24.7"
clap = { version = "4.3.24", features = ["cargo"] }
copypasta = { version = "0.10.0", default-features = false }
resvg = "0.36.0"
usvg = "0.36.0"
tiny-skia = "0.11.2"
anyhow = "1.0.75"
dirs = "5.0.1"
serde = { version = "1.0.190", features = ["derive"] }
toml = "0.7.6"
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
notify = "6.1.1"
dark-light = "1.0.0"
# We only decompress our own compressed data, so disable `safe-decode` and
# `checked-decode`
lz4_flex = { version = "0.11.1", default-features = false, features = ["frame", "safe-encode", "std"] }
pollster = "0.3.0"
serde_yaml = "0.9.27"
indexmap = { version = "2.1.0", features = ["serde"] }
html-escape = "0.2.13"
fxhash = "0.2.1"
twox-hash = "1.6.3"
taffy = "0.3.18"
syntect = "5.1.0"
smart-debug = "0.0.3"
two-face = "0.3.0"
# Required for WGPU to work properly with Vulkan
fontdb = { version = "0.13.1", features = ["fontconfig"] }
human-panic = "1.2.2"
notify-debouncer-full = { version = "0.3.1", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
glyphon = "0.3"
string_cache = { version = "0.8.7", default-features = false }
raw-window-handle = "0.5.2"

[profile.release]
strip = true

# Run `cargo run/build --profile release-debug` to use
[profile.release-debug]
inherits = "release"
strip = false
debug = true

[profile.release-lto]
inherits = "release"
lto = true

[dev-dependencies]
base64 = "0.21.4"
filetime = "0.2.22"
insta = "1.34.0"
pretty_assertions = "1.4.0"
tempfile = "3.8.1"
wiremock = "0.5.21"

# Selectively bump up opt level for some dependencies to improve dev build perf
[profile.dev.package]
ttf-parser.opt-level = 2
rustybuzz.opt-level = 2
cosmic-text.opt-level = 2
png.opt-level = 2
