[workspace]
members = [
    ".",
    "xtask",
]

[package]
name = "inlyne"
version = "0.4.1"
description = "Introducing Inlyne, a GPU powered yet browserless tool to help you quickly view markdown files in the blink of an eye."
edition = "2021"
authors = ["trimental"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Inlyne-Project/inlyne"
homepage = "https://github.com/Inlyne-Project/inlyne"
rust-version = "1.72.1"
exclude = [
    "/ci/*",
    "/.github/*",
    "/assets/manual_test_data/*",
]
keywords = ["markdown", "viewer", "gpu"]

[features]
default = ["wayland", "x11"]
x11 = ["copypasta/x11", "winit/x11"]
wayland = ["copypasta/wayland", "winit/wayland"]

[dependencies]
winit = { version = "0.28.7", default-features = false }
wgpu = "0.16"
bytemuck = { version = "1.15.0", features = [ "derive" ] }
lyon = "1.0.1"
comrak = { version = "0.22.0", default-features = false, features = ["shortcodes", "syntect"] }
open = "5.1.2"
html5ever = "0.27.0"
image = "0.24.9"
clap = { version = "4.4.18", features = ["cargo", "derive"] }
copypasta = { version = "0.10.1", default-features = false }
resvg = "0.37.0"
anyhow = "1.0.81"
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
notify = "6.1.1"
dark-light = "1.1.1"
# We only decompress our own compressed data, so disable `safe-decode` and
# `checked-decode`
lz4_flex = { version = "0.11.3", default-features = false, features = ["frame", "safe-encode", "std"] }
pollster = "0.3.0"
serde_yaml = "0.9.34"
indexmap = { version = "2.2.6", features = ["serde"] }
html-escape = "0.2.13"
fxhash = "0.2.1"
twox-hash = "1.6.3"
taffy = "0.3.18"
syntect = "5.2.0"
smart-debug = "0.0.3"
two-face = "0.3.0"
# NOTE: We need `fontconfig` enabled to pick up fonts on some systems, but
# `glyphon` doesn't provide any way set that feature for `fontdb`, so we have to
# set the feature for the transitive dep while manually making sure that we keep
# the versions in sync ;-;
fontdb = { version = "0.14.1", features = ["fontconfig"] }
human-panic = "1.2.3"
notify-debouncer-full = { version = "0.3.1", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
glyphon = "0.3"
string_cache = { version = "0.8.7", default-features = false }
raw-window-handle = "0.5.2"
edit = "0.1.5"
anstream = "0.6.13"
anstyle = "1.0.6"
metrics = "0.22.3"
metrics-util = { version = "0.16.3", default-features = false, features = ["registry", "summary"] }
parking_lot = "0.12.1"
ureq = "2.9.6"

[target.'cfg(inlyne_tcp_metrics)'.dependencies]
metrics-exporter-tcp = "0.9.0"

[profile.release]
strip = true

# Run `cargo run/build --profile release-debug` to use
[profile.release-debug]
inherits = "release"
strip = false
debug = true

[profile.release-lto]
inherits = "release"
lto = true

[dev-dependencies]
base64 = "0.22.0"
filetime = "0.2.23"
insta = "1.38.0"
pretty_assertions = "1.4.0"
tempfile = "3.10.1"
wiremock = "0.6.0"

# Selectively bump up opt level for some dependencies to improve dev build perf
[profile.dev.package]
ttf-parser.opt-level = 2
rustybuzz.opt-level = 2
cosmic-text.opt-level = 2
png.opt-level = 2
