[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["cargo", "derive"] }
clap_complete = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
